完善聊天室基本功能，主页展示，个人资料展示，论坛